support fixed mode assignment from FNE monitor; fix issue with dropdown menu overflow;

--- a/monitor/webroot/dashboard.css
+++ b/monitor/webroot/dashboard.css
@@ -81,6 +81,11 @@ h1 {
     text-transform: uppercase;
 }
 
+.dropdown-menu {
+    overflow-y: auto;
+    max-height: 45vh;
+}
+
 /*
  * Content
  */
